--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Eventify"
         tools:targetApi="31">
-
+        <activity
+            android:name=".FeedbackList"
+            android:exported="false" />
         <activity
             android:name=".SendFeedback"
             android:exported="false" />
