--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-feature android:name="android.hardware.camera" />
-    <uses-feature android:name="android.hardware.telephony"/>
-    <uses-feature android:name="android.hardware.microphone"/>
+    <uses-feature android:name="android.hardware.telephony" />
+    <uses-feature android:name="android.hardware.microphone" />
+
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -22,6 +24,12 @@
         android:theme="@style/Theme.Eventify"
         tools:targetApi="31">
         <activity
+            android:name=".EventInvitationDetails"
+            android:exported="false" />
+        <activity
+            android:name=".InvitationList"
+            android:exported="false" />
+        <activity
             android:name=".MessageDashboard"
             android:exported="false" />
         <activity
@@ -35,7 +43,6 @@
             android:exported="false" />
         <activity
             android:name=".SendFeedback"
-
             android:exported="false" />
         <activity
             android:name=".EventListActivity"
@@ -64,8 +71,9 @@
         <activity
             android:name=".SendMessage"
             android:exported="false" />
-        <activity android:name=".EditMessage"
-        android:exported="false" />
+        <activity
+            android:name=".EditMessage"
+            android:exported="false" />
         <activity
             android:name=".HomeActivity"
             android:exported="false" />
